# Autoclick

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  RELEASE_NOTES.md  app.db  clippy.toml  config.json  environment.yml  fix.py  index.html  main_auto_approve_refactored.py  package.json  pnpm-lock.yaml  requirements.txt  rust-toolchain.toml  search_gui.py  search_pystray.py  search_strings.py  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: windows-tauri-release.yml
assets/styles/: minimal.qss
auto_approve/: __init__.py  app_state.py  auto_hwnd_updater.py  config_manager.py  config_optimizer.py  gui_performance_monitor.py  gui_responsiveness_manager.py  hwnd_picker.py  logger_manager.py  menu_icons.py  optimized_event_handler.py  optimized_ui_manager.py  path_utils.py  performance_config.py  performance_monitor.py  performance_optimizer.py  performance_types.py  pipeline_workers.py  qt_dpi_manager.py  qt_workers.py  scanner_process_adapter.py  scanner_worker_refactored.py  screen_list_dialog.py  settings_dialog.py  smart_capture_test_manager.py  smart_process_finder.py  ui_enhancements.py  ui_optimizer.py  ui_update_bridge.py  wgc_preview_dialog.py  win_clicker.py
auto_approve/core/: __init__.py  app_utils.py
auto_approve/performance/: __init__.py  alert_handlers.py
auto_approve/ui/: __init__.py  dpi_auto_adapter.py
capture/: AsyncFrameManager.py  NonBlockingCaptureManager.py  __init__.py  async_capture_manager.py  async_capture_manager_optimized.py  async_usage_example.py  cache_manager.py  capture_manager.py  high_performance_frame_buffer.py  monitor_utils.py  shared_frame_cache.py  single_frame_preview.py  ultimate_performance_capture_manager.py  wgc_backend.py
examples/: multithreading_demo.py
scripts/: release_check.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/crates/autoclick-capture/: Cargo.toml
src-tauri/crates/autoclick-capture/benches/: capture_bench.rs
src-tauri/crates/autoclick-capture/src/: backend.rs  convert.rs  drop_guard.rs  frame.rs  latest_frame.rs  lib.rs  preview_encode.rs  recovery.rs  session.rs  single_frame.rs  wgc_monitor.rs  wgc_window.rs
src-tauri/crates/autoclick-detect/: Cargo.toml
src-tauri/crates/autoclick-detect/benches/: detect_bench.rs
src-tauri/crates/autoclick-detect/src/: debug_dump.rs  hit_policy.rs  lib.rs  match.rs  pipeline.rs  preprocess.rs  roi.rs  template_store.rs
src-tauri/crates/autoclick-detect/tests/: golden_match.rs
src-tauri/crates/autoclick-diagnostics/: Cargo.toml
src-tauri/crates/autoclick-diagnostics/src/: error.rs  error_code.rs  export_bundle.rs  lib.rs  logging.rs  perf_budget.rs
src-tauri/crates/autoclick-domain/: Cargo.toml
src-tauri/crates/autoclick-domain/src/: config.rs  lib.rs  migration.rs  paths.rs  runtime_snapshot.rs  template.rs  types.rs  user_message.rs
src-tauri/crates/autoclick-input/: Cargo.toml
src-tauri/crates/autoclick-input/src/: coordinate.rs  lib.rs  policy.rs  post_message.rs  send_input.rs
src-tauri/crates/autoclick-platform-win/: Cargo.toml
src-tauri/crates/autoclick-platform-win/src/: dpi.rs  hit_test.rs  lib.rs  locator.rs  monitor.rs  process.rs  window.rs  window_state.rs
src-tauri/crates/autoclick-runtime/: Cargo.toml
src-tauri/crates/autoclick-runtime/src/: lib.rs  metrics.rs  preview_bus.rs  scanner_engine.rs  shutdown.rs  state_machine.rs  supervisor.rs
src-tauri/crates/autoclick-storage/: Cargo.toml
src-tauri/crates/autoclick-storage/src/: import_legacy.rs  lib.rs  migrations.rs  path_resolver.rs  repo_config.rs  repo_run.rs  repo_template.rs  template_fs.rs
src-tauri/src/: app_state.rs  bootstrap.rs  capture_window.rs  dev_fallback.rs  lib.rs  main.rs  runtime_controller.rs  tray.rs  updater.rs  windowing.rs
src-tauri/src/commands/: config.rs  diagnostics.rs  error.rs  import_legacy.rs  mod.rs  runtime.rs  system.rs  target.rs  template.rs  updater.rs
src-tauri/tests/: windows_integration.rs
src/app/: providers.tsx  router.tsx
src/lib/: contracts.ts  presentation.ts  tauriClient.mock.ts  tauriClient.ts
src/stores/: configStore.ts  runtimeStore.ts
storage/: __init__.py  sqlite_storage.py
tests/: demo_process_scanner.py  simple_dependency_check.py  simple_performance_test.py  simple_process_test.py  simple_test.py  simple_ui_performance_test.py  simple_ui_responsiveness_test.py  test_app_shell_polling.test.tsx  test_async_capture_nonblocking.py  test_async_image_save.py  test_auto_hwnd_demo.py  test_auto_hwnd_diagnosis.py  test_auto_hwnd_minimal.py  test_auto_hwnd_quick.py  test_auto_hwnd_simple.py  test_auto_hwnd_update_integration.py  test_auto_hwnd_updater.py  test_auto_search_functionality.py  test_auto_search_simple.py  test_bounded_latest_queue.py  test_cache_manager_cleanup_timer.py  test_capture_manager_mock_backend.py  test_capture_optimization.py  test_capture_optimization_simple.py  test_capture_performance.py  test_code_formatter.py  test_code_standardization.py  test_combo_wheel_disable.py  test_complete_fix.py  test_complete_shared_channel.py  test_concurrency_regression.py  test_config_save_fix.py  test_conflict_analysis.py  test_consistent_dpi_pure.py  test_cpu_manager_smoke.py  test_dependency_analysis.py  test_direct_wgc.py  test_enhanced_wheel.py  test_env_smoke.py  test_event_hook_switch.py  (+86 more)
tools/: convert_png_to_ico.py  fix_indentation.py  fix_monitor_config.py  fix_scanner_process_hang.py  fix_wgc_hwnd.py  main_performance_optimizer.py  performance_diagnostic.py  performance_guardian.py  performance_monitor.py  run_tests_timeout.py  smoke_import_test.py  ui_startup_lag_diagnosis.py  verify_wgc.py
utils/: __init__.py  bounded_latest_queue.py  memory_config_manager.py  memory_debug_manager.py  memory_optimization_manager.py  memory_performance_monitor.py  memory_template_manager.py  performance_profiler.py  win_dpi.py  win_types.py
workers/: async_tasks.py  cpu_tasks.py  io_tasks.py  scanner_process.py
(+16 files in other folders)
