[workspace]
members = [
  "src-tauri",
  "src-tauri/crates/autoclick-domain",
  "src-tauri/crates/autoclick-platform-win",
  "src-tauri/crates/autoclick-storage",
  "src-tauri/crates/autoclick-capture",
  "src-tauri/crates/autoclick-detect",
  "src-tauri/crates/autoclick-input",
  "src-tauri/crates/autoclick-runtime",
  "src-tauri/crates/autoclick-diagnostics",
]
resolver = "2"

[workspace.package]
version = "6.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-build = { version = "2.5.1" }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.0"
tauri-plugin-updater = "2.9.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
image = { version = "0.25.8", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
imageproc = "0.25.0"
fast_image_resize = "5.3.0"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
