[package]
name = "autoclick-capture"
version.workspace = true
edition.workspace = true

[dependencies]
autoclick-domain = { path = "../autoclick-domain" }
autoclick-platform-win = { path = "../autoclick-platform-win" }
image.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
windows-capture = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "capture_bench"
harness = false
