[package]
name = "autoclick-diagnostics"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
autoclick-domain = { path = "../autoclick-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true

[dev-dependencies]
uuid.workspace = true
