[package]
name = "autoclick-storage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
autoclick-domain = { path = "../autoclick-domain" }
chrono.workspace = true
image.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
